--- a/elmclient/package.json
+++ b/elmclient/package.json
@@ -11,30 +11,26 @@
     "scripts": {
         "start": "webpack-dev-server --progress --color --inline",
         "prebuild": "rm -rf dist/*",
-        "build": "webpack",
-        "reinstall": "rm -rf dist/* node_modules && npm i elm && npm i && mkdir -p src/elm; elm make; true"
+        "build": "webpack"
     },
     "dependencies": {
         "ace-css": "^1.1.0",
-        "autoprefixer": "^9.7.6",
+        "autoprefixer": "^9.8.0",
         "bootstrap-sass": "^3.4.1",
-        "compression-webpack-plugin": "^3.1.0",
-        "copy-webpack-plugin": "^5.1.1",
+        "compression-webpack-plugin": "^4.0.0",
+        "copy-webpack-plugin": "^6.0.1",
         "css-loader": "^3.5.3",
         "cssnano": "^4.1.10",
-        "elm": "^0.19.1-3",
-        "elm-format": "^0.8.3",
-        "elm-github-install": "^1.6.1",
         "elm-webpack-loader": "^6.0.1",
         "file-loader": "^6.0.0",
         "foreman": "^3.0.1",
         "html-webpack-inline-source-plugin": "0.0.10",
         "html-webpack-plugin": "^4.3.0",
-        "jquery": "^3.5.0",
+        "jquery": "^3.5.1",
         "json-server": "^0.16.1",
         "milligram-scss": "^1.3.0",
         "mini-css-extract-plugin": "^0.9.0",
-        "node-sass": "^4.14.0",
+        "node-sass": "^4.14.1",
         "postcss-import": "^12.0.1",
         "postcss-loader": "^3.0.0",
         "postcss-preset-env": "^6.7.0",
@@ -46,7 +42,7 @@
         "url-loader": "^4.1.0",
         "webpack": "^4.43.0",
         "webpack-cli": "^3.3.11",
-        "webpack-dev-server": "^3.10.3",
+        "webpack-dev-server": "^3.11.0",
         "webpack-merge": "^4.2.2"
     }
 }
