--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -80,10 +80,11 @@ http {
     # OCSP stapling
     ssl_stapling on;
     ssl_stapling_verify on;
-    ssl_trusted_certificate /etc/letsencrypt/live/${FQDN}/fullchain.pem;
-    lua_ssl_trusted_certificate /etc/letsencrypt/live/${FQDN}/fullchain.pem;
-    # lua_ssl_trusted_certificate /etc/ssl/certs/ca-certificates.pem;
-    lua_ssl_verify_depth 0;
+    #ssl_trusted_certificate /etc/letsencrypt/live/${FQDN}/fullchain.pem;
+    ssl_trusted_certificate /etc/ssl/certs/ca-certificates.crt;
+    #lua_ssl_trusted_certificate /etc/letsencrypt/live/${FQDN}/fullchain.pem;
+    lua_ssl_trusted_certificate /etc/ssl/certs/ca-certificates.crt;
+    lua_ssl_verify_depth 4;
 
     ${NGINX_HTTP_DEV_INCLUDES}
 
