--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -89,7 +89,7 @@ http {
     ${NGINX_HTTP_DEV_INCLUDES}
 
     # Set up session store
-    lua_shared_dict sessions 1m;
+    lua_shared_dict sessions 10m;
 
     upstream certbot {
         server certbot;
@@ -132,6 +132,15 @@ http {
         set $session_shm_lock_step     0.001; # (in seconds)
         set $session_shm_lock_ratio    2;
         set $session_shm_lock_max_step 0.5;   # (in seconds)
+        # I believe this strategy is better for js-heavy applications
+        # with many async requesets, as our elmclient has.
+        set $session_strategy regenerate;
+        # Persist cookies between browser sessions
+        set $session_cookie_persistent on;
+        # Expire cookies after 1wk, or 604800s
+        set $session_cookie_lifetime 604800;
+        # Renew cookies after an hour
+        set $session_cookie_renew      3600;
 
         location /.well-known {
 	        proxy_pass http://certbot;
