Fix API documentation using per-user JWT. Closes #131
Users will now see API documentation based on their identity. The /auth/api.json endpoint will parse a session cookie, obtain a JWT from the backend, and then fetch the OpenAPI specification from Postgrest using that JWT. The swagger-ui includes a textbox for users to paste in their JWT.

--- a/openresty/nginx/conf/includes/http/server/locations/authapp.conf
+++ b/openresty/nginx/conf/includes/http/server/locations/authapp.conf
@@ -10,7 +10,7 @@ location /auth/ {
     }
 
     # We are going to 
-    set $session_cookie_path /auth/login/;
+    set $session_cookie_path /auth/;
     # Allow cookies to persist after the browser is closed
     set $session_cookie_persistent on;
     # Cookies expire in 1 week
@@ -53,6 +53,58 @@ location /auth/ {
         content_by_lua_block{
             local authapp = require('authapp')
             authapp.get_me(ngx.ctx.netid)
+        }
+    }
+
+    # Return postgrest's built-in openapi specification
+    # so that it can be rendered in a pretty webpage by
+    # the swagger-ui. This location block is put here
+    # under the /auth scope because that is the scope of
+    # our session cookie.
+    location = /auth/api.json {
+        default_type 'text/plain';
+
+        content_by_lua_block {
+            local openapi = require("openapi");
+            local session, netid, jwt, ni = openapi.get_jwt_from_session_cookie()
+            openapi.print_openapi_spec(jwt)
+        }
+    }
+
+    location /auth/api2.json {
+        default_type 'text/plain';
+        content_by_lua_block {
+            local cjson = require "cjson"
+
+            local function not_empty(s)
+                return s ~= nil and s ~= ''
+            end
+            function all_trim(s)
+                return s:match( "^'*(.-)'*$" )
+            end
+
+            local swagger_jwt = os.getenv('SWAGGER_JWT')
+            if not_empty(swagger_jwt) then
+                ngx.req.set_header("Authorization", "Bearer "..swagger_jwt)
+            end
+
+            local res = ngx.location.capture("/rest/")
+            if res then
+                local api_data = cjson.decode(res.body)
+                local swagger_info_title = os.getenv('SWAGGER_INFO_TITLE')
+                local swagger_info_description = os.getenv('SWAGGER_INFO_DESCRIPTION')
+                if api_data.info then
+                    if not_empty(swagger_info_title) then
+                        api_data.info.title = all_trim(swagger_info_title, '\'')
+                    end
+                    if not_empty(swagger_info_description) then
+                        api_data.info.description = all_trim(swagger_info_description, '\'')
+                    end
+                end
+
+                local output = cjson.encode(api_data)
+                ngx.print(output)
+            end
         }
     }
 }
