Harden nginx a bit

--- a/openresty/nginx/conf/includes/http/server/locations/elmclient.conf
+++ b/openresty/nginx/conf/includes/http/server/locations/elmclient.conf
@@ -4,6 +4,7 @@ location / {
     root /var/elmclient;
     index index.html;
     gzip_static on;
+    limit_except HEAD OPTIONS GET { deny all; }
     location ~* main-.*\.(?:css|js)$ {
         expires max;
         add_header Pragma public;
