--- a/openresty/nginx/conf/includes/http/server/locations/swagger.conf
+++ b/openresty/nginx/conf/includes/http/server/locations/swagger.conf
@@ -1,5 +1,7 @@
 
 location /openapi/ {
+
+    limit_except GET { deny all; }
     alias   html/swagger/;
     index index.html index.htm;
     autoindex off;
