--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -17,12 +17,26 @@ http {
     sendfile on;
     tcp_nopush on;
     tcp_nodelay on;
-    keepalive_timeout 65;
     types_hash_max_size 2048;
     server_tokens off;
     # See https://github.com/openresty/headers-more-nginx-module#readme,
     # which is bundled with openresty https://openresty.org/en/components.html
     more_set_headers 'Server:';
+
+    # BEGIN Some hardening
+    client_body_buffer_size  1K;
+    client_header_buffer_size 1k;
+    client_max_body_size 10k; # Could need to increase this if need file uploads
+    large_client_header_buffers 3 1k;
+
+    client_body_timeout 10;
+    client_header_timeout 10;
+    keepalive_timeout 5 5;
+    send_timeout 10;
+
+    #limit_req_zone $binary_remote_addr zone=req_limit_per_ip:10m rate=2r/s;
+    #limit_conn_zone $binary_remote_addr zone=conn_limit_per_ip:10m;
+    # END Some hardening
 
     # Hide upstream proxy headers, if any
     proxy_hide_header X-Powered-By;
