--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -111,7 +111,8 @@ http {
 
     # HTTP server
     server {
-        listen 80 default_server;
+        listen 80;
+        server_name ${FQDN};
 
         location /.well-known {
             proxy_pass http://certbot;
@@ -125,9 +126,9 @@ http {
     # HTTPS server
     server {
         #expose external env vars as internal nginx variables
-        listen 443 default_server ssl http2;
+        listen 443 ssl http2;
 
-        server_name _;
+        server_name ${FQDN};
         charset utf-8;
         uninitialized_variable_warn off;
 
