Add default server

--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -109,6 +109,16 @@ http {
         server certbot;
     }
 
+    
+    # Add a default server that will result in a 444
+    # response if we don't recognize the HOST of the
+    # request.
+    server {
+      listen 80 default_server;
+      return 444;
+    }
+
+
     # HTTP server
     server {
         listen 80;
