Return 444 in https if we don't recognize host

--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -167,6 +167,11 @@ http {
         # Renew cookies after an hour
         set $session_cookie_renew      3600;
 
+        # Return 444 if we don't recognize the HOST
+        if ($host != $server_name) {
+            return       444;
+        }
+
         location /.well-known {
 	        proxy_pass http://certbot;
         }
