Create small WAF for blocking bot/scanner IP addresses

--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -105,6 +105,9 @@ http {
     # Set up session store
     lua_shared_dict sessions 10m;
 
+    # Shared dict for banned ip addresses used by out web application firewall (waf.lua)
+    lua_shared_dict banned_ips 2m;
+
     upstream certbot {
         server certbot;
     }
@@ -172,10 +175,19 @@ http {
             return       444;
         }
 
+        # I use this robots.txt in order to create a honeypot
+        # for bots at /admin
+        location = /robots.txt {
+           add_header Content-Type text/plain;
+           return 200 "User-agent: *\nDisallow: /admin\n";
+        }
+
         location /.well-known {
 	        proxy_pass http://certbot;
         }
-        
+
+        access_by_lua_file '../lualib/user_code/waf.lua';
+
         include includes/http/server/*.conf;
         ${NGINX_SERVER_DEV_INCLUDES}
     }
