Rate limit connections, requests, and bandwidth

--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -34,8 +34,6 @@ http {
     keepalive_timeout 5 5;
     send_timeout 10;
 
-    #limit_req_zone $binary_remote_addr zone=req_limit_per_ip:10m rate=2r/s;
-    #limit_conn_zone $binary_remote_addr zone=conn_limit_per_ip:10m;
     # END Some hardening
 
     # Hide upstream proxy headers, if any
@@ -108,6 +106,11 @@ http {
     # Shared dict for banned ip addresses used by out web application firewall (waf.lua)
     lua_shared_dict banned_ips 2m;
 
+    # Rate limit number of requests and bandwidth.
+    # See https://docs.nginx.com/nginx/admin-guide/security-controls/controlling-access-proxied-http/#limit_req_burst
+    limit_req_zone $binary_remote_addr zone=req_limit_zone:10m rate=25r/s;
+    limit_conn_zone $binary_remote_addr zone=bandwidth_limit_zone:10m;
+
     upstream certbot {
         server certbot;
     }
@@ -169,6 +172,14 @@ http {
         set $session_cookie_lifetime 604800;
         # Renew cookies after an hour
         set $session_cookie_renew      3600;
+
+        # Rate limit connections. Limit to 5 concurrent connections
+        # and throttle bandwidth after 1m of traffic.
+        # See https://docs.nginx.com/nginx/admin-guide/security-controls/controlling-access-proxied-http/#limit_req_burst
+        limit_req zone=req_limit_zone burst=50 delay=25;
+        limit_conn bandwidth_limit_zone 25;
+        limit_rate_after 1m;
+        limit_rate       50k;
 
         # Return 444 if we don't recognize the HOST
         if ($host != $server_name) {
