Return 404 when honeypot path is hit

--- a/openresty/nginx/conf/includes/http/server/locations/waf.conf
+++ b/openresty/nginx/conf/includes/http/server/locations/waf.conf
@@ -24,6 +24,6 @@ location /banned/ {
         local remote_addr = ngx.var.remote_addr
         local ban_duration = 600
         local succ, err = banned_ips:set(remote_addr, 1, ban_duration)
-        ngx.say('Hello,world! You are going to get banned')
+        ngx.exit(ngx.HTTP_NOT_FOUND)
     }
 }
