Fix wordpress prefix honeypot path

--- a/openresty/nginx/conf/includes/http/server/locations/waf.conf
+++ b/openresty/nginx/conf/includes/http/server/locations/waf.conf
@@ -9,7 +9,7 @@ location ~* .(cgi|php)$ {
     rewrite ^(.*)$ /banned/ ;
 }
 
-location ^~ /wp- {
+location ~* ^/wp- {
     rewrite ^(.*)$ /banned/ ;
 }
 
