Tweaks in attempt to harden and optimize

--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -13,6 +13,7 @@ http {
     # Use the built-in Docker DNS resolver
     # resolver 127.0.0.11 ipv6=off;
     resolver 127.0.0.11 ipv6=off;
+    resolver_timeout 5s; # Default is 30s, which is way long
     
     sendfile on;
     tcp_nopush on;
@@ -27,12 +28,22 @@ http {
     client_body_buffer_size  1K;
     client_header_buffer_size 1k;
     client_max_body_size 10k; # Could need to increase this if need file uploads
-    large_client_header_buffers 3 1k;
+    large_client_header_buffers 2 1k;
 
     client_body_timeout 10;
     client_header_timeout 10;
-    keepalive_timeout 5 5;
+    # Keepalive is zero by default and we'll increase it
+    # for different servers
+    keepalive_timeout 0;
     send_timeout 10;
+
+
+    #
+    # Allow the server to close the connection after a client stops
+    # responding.
+    # Frees up socket-associated memory.
+    # See https://gist.github.com/v0lkan/90fcb83c86918732b894
+    reset_timedout_connection on;
 
     # END Some hardening
 
@@ -55,7 +66,8 @@ http {
     gzip_comp_level 6;
     gzip_buffers 16 8k;
     gzip_http_version 1.1;
-    gzip_types text/plain text/css application/json application/vnd.pgrst.object+json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_min_length    256;
+    gzip_types text/plain text/css application/json application/vnd.pgrst.object+json application/x-javascript text/xml application/xml application/xml+rss text/javascript text/html;
 
     ##
     # SSL Settings, most of this is from https://ssl-config.mozilla.org/ and
@@ -180,6 +192,9 @@ http {
         limit_conn bandwidth_limit_zone 25;
         limit_rate_after 1m;
         limit_rate       50k;
+
+        # Set a reasonable keepalive
+        keepalive_timeout 75 60;
 
         # Return 444 if we don't recognize the HOST
         if ($host != $server_name) {
