--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -67,7 +67,7 @@ http {
     gzip_buffers 16 8k;
     gzip_http_version 1.1;
     gzip_min_length    256;
-    gzip_types text/plain text/css application/json application/vnd.pgrst.object+json application/x-javascript text/xml application/xml application/xml+rss text/javascript text/html;
+    gzip_types text/plain text/css application/json application/vnd.pgrst.object+json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
     ##
     # SSL Settings, most of this is from https://ssl-config.mozilla.org/ and
