Harden the homebrew openresty waf

--- a/openresty/nginx/conf/includes/http/server/locations/waf.conf
+++ b/openresty/nginx/conf/includes/http/server/locations/waf.conf
@@ -2,7 +2,7 @@
 # that are often scanned by malicious IP searching for
 # vulnerabilities. If any of these locations are hit,
 # we add the remote address to the `banned_ips` 
-# shared dictionary. See waf.lua for how these IPs can
+# shared dictionary. See waf-access.lua for how these IPs can
 # be banned using access_by_lua_file in openresty
 
 location ~* .(cgi|php)$ {
