--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -133,7 +133,13 @@ http {
     # request.
     server {
       listen 80 default_server;
-      return 444;
+
+      location / {
+          # Ban IPs that hit our default server. See also waf.conf
+          content_by_lua_block {
+              require('waf').ban(600, ngx.HTTP_CLOSE)
+          }
+      }
     }
 
 
@@ -141,13 +147,16 @@ http {
     server {
         listen 80;
         server_name ${FQDN};
+        access_by_lua_file '../lualib/user_code/waf-access.lua';
 
         location /.well-known {
             proxy_pass http://certbot;
         }
 
         location / {
-            return 301 https://$host$request_uri;
+            content_by_lua_block {
+                return ngx.redirect("https://" .. ngx.var.host .. ngx.var.request_uri, 302)
+            }
         }
     }
 
@@ -196,11 +205,6 @@ http {
         # Set a reasonable keepalive
         keepalive_timeout 75 60;
 
-        # Return 444 if we don't recognize the HOST
-        if ($host != $server_name) {
-            return       444;
-        }
-
         # I use this robots.txt in order to create a honeypot
         # for bots at /admin
         location = /robots.txt {
@@ -212,7 +216,7 @@ http {
 	        proxy_pass http://certbot;
         }
 
-        access_by_lua_file '../lualib/user_code/waf.lua';
+        access_by_lua_file '../lualib/user_code/waf-access.lua';
 
         include includes/http/server/*.conf;
         ${NGINX_SERVER_DEV_INCLUDES}
