Autoscale nginx workers and use epoll

--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -1,8 +1,10 @@
 include includes/globals/*.conf;
 
-worker_processes  1;
+worker_processes    auto;
+
+# See https://geekflare.com/nginx-production-configuration/
 events {
-    worker_connections  1024;
+    use                 epoll;
 }
 
 http {
