Serve pre-compressed Brotli assets if they exist

--- a/openresty/nginx/conf/includes/http/server/locations/elmclient.conf
+++ b/openresty/nginx/conf/includes/http/server/locations/elmclient.conf
@@ -5,11 +5,51 @@ location / {
     index index.html;
     gzip_static on;
     limit_except HEAD OPTIONS GET { deny all; }
-    location ~* main-.*\.(?:css|js)$ {
+
+    # Begin Brotli, see https://siipo.la/blog/poor-mans-brotli-serving-brotli-files-without-nginx-brotli-module
+    set $extension "";
+    if ($http_accept_encoding ~ br) {
+        set $extension .br;
+    }
+
+    if (-f $request_filename$extension) {
+        rewrite (.*) $1$extension break;
+    }
+
+    location ~ /*.css.br$ {
         expires max;
         add_header Pragma public;
         add_header Cache-Control "public";
+        gzip off;
+        types {}
+        default_type text/css;
+        add_header Content-Encoding br;
+        add_header Vary "Accept-Encoding";
     }
+
+    location ~ /*.js.br$ {
+        expires max;
+        add_header Pragma public;
+        add_header Cache-Control "public";
+        gzip off;
+        types {}
+        default_type application/javascript;
+        add_header Content-Encoding br;
+        add_header Vary "Accept-Encoding";
+    }
+
+    location ~ /*.svg.br$ {
+        expires max;
+        add_header Pragma public;
+        add_header Cache-Control "public";
+        gzip off;
+        types {}
+        default_type image/svg+xml;
+        add_header Content-Encoding br;
+        add_header Vary "Accept-Encoding";
+    }
+    # End Brotli
+
     # Be rediculous and use http2 push for an extra 0.25ms savings ;P
     # This is not workign right now.
     location /index.html {
