Add extra honeypot locations

--- a/openresty/nginx/conf/includes/http/server/locations/waf.conf
+++ b/openresty/nginx/conf/includes/http/server/locations/waf.conf
@@ -5,7 +5,7 @@
 # shared dictionary. See waf-access.lua for how these IPs can
 # be banned using access_by_lua_file in openresty
 
-location ~* .(cgi|php)$ {
+location ~* .(cgi|php|asp|jsp|exe)$ {
     rewrite ^(.*)$ /banned/ ;
 }
 
@@ -14,6 +14,10 @@ location ~* ^/wp- {
 }
 
 location = /admin/ {
+    rewrite ^(.*)$ /banned/ ;
+}
+
+location = /phpMydmin/ {
     rewrite ^(.*)$ /banned/ ;
 }
 
