--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -176,16 +176,12 @@ http {
         
         access_log logs/access.log combined;
 
-        # Use shared memory for sessions
+        # Use redis for sessions
         # https://github.com/bungle/lua-resty-session
-        set $session_storage shm;
-        set $session_shm_store         sessions;
-        set $session_shm_uselocking    on;
-        set $session_shm_lock_exptime  30;    # (in seconds)
-        set $session_shm_lock_timeout  5;     # (in seconds)
-        set $session_shm_lock_step     0.001; # (in seconds)
-        set $session_shm_lock_ratio    2;
-        set $session_shm_lock_max_step 0.5;   # (in seconds)
+        set $session_storage redis;
+        set $session_redis_host redis;
+        set $session_redis_auth ${REDIS_PASSWORD};
+        #
         # I believe this strategy is better for js-heavy applications
         # with many async requesets, as our elmclient has.
         set $session_strategy regenerate;
