--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -181,6 +181,8 @@ http {
         set $session_storage redis;
         set $session_redis_host redis;
         set $session_redis_auth ${REDIS_PASSWORD};
+        set $session_secret ${OPENRESTY_SESSION_SECRET};
+
         #
         # I believe this strategy is better for js-heavy applications
         # with many async requesets, as our elmclient has.
