Check for banned IPs in default nginx (unnamed) server

--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -136,6 +136,7 @@ http {
     server {
       listen 80 default_server;
 
+      access_by_lua_file '../lualib/user_code/waf-access.lua';
       location / {
           # Ban IPs that hit our default server. See also waf.conf
           content_by_lua_block {
