Move WAF access check to http block out of server blocks

--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -129,6 +129,8 @@ http {
         server certbot;
     }
 
+    # Check all requests against the WAF
+    access_by_lua_file '../lualib/user_code/waf-access.lua';
     
     # Add a default server that will result in a 444
     # response if we don't recognize the HOST of the
@@ -136,7 +138,6 @@ http {
     server {
       listen 80 default_server;
 
-      access_by_lua_file '../lualib/user_code/waf-access.lua';
       location / {
           # Ban IPs that hit our default server. See also waf.conf
           content_by_lua_block {
@@ -150,7 +151,6 @@ http {
     server {
         listen 80;
         server_name ${FQDN};
-        access_by_lua_file '../lualib/user_code/waf-access.lua';
 
         location /.well-known {
             proxy_pass http://certbot;
@@ -216,8 +216,6 @@ http {
         location /.well-known {
 	        proxy_pass http://certbot;
         }
-
-        access_by_lua_file '../lualib/user_code/waf-access.lua';
 
         include includes/http/server/*.conf;
         ${NGINX_SERVER_DEV_INCLUDES}
