Add note about lua caching

--- a/openresty/nginx/conf/includes/http/init_lua.conf
+++ b/openresty/nginx/conf/includes/http/init_lua.conf
@@ -1,4 +1,8 @@
 # set search paths for pure Lua external libraries (';;' is the default path):
 lua_package_path '${prefix}../lualib/user_code/?.lua;${prefix}../lualib/user_code/vendor/lua-resty-session/?.lua;${prefix}../lualib/user_code/nginx-auth-cas-lua/?.lua;${prefix}../lualib/user_code/vendor/lua-resty-http/?.lua;;';
 init_by_lua_file '../lualib/user_code/init_phase.lua';
+
+# We want caching on, which is the default. See
+# https://github.com/openresty/lua-nginx-module#lua_code_cache
+# TODO: turn off caching in development?
 #lua_code_cache off;
