Ban https clients who do not match host header

--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -206,6 +206,13 @@ http {
         # Set a reasonable keepalive
         keepalive_timeout 75 60;
 
+       access_by_lua_block {
+           local waf = require "waf"
+            if ngx.var.host ~= ngx.var.server_name then
+                waf.ban(600, ngx.HTTP_CLOSE)
+            end
+       }
+
         # I use this robots.txt in order to create a honeypot
         # for bots at /admin
         location = /robots.txt {
