--- a/openresty/nginx/conf/includes/http/server/locations/elmclient.conf
+++ b/openresty/nginx/conf/includes/http/server/locations/elmclient.conf
@@ -10,8 +10,9 @@ location / {
         add_header Pragma public;
         add_header Cache-Control "public";
     }
+
     # Be rediculous and use http2 push for an extra 0.25ms savings ;P
-    # This is not workign right now.
+    # This is not working right now.
     location /index.html {
         http2_push /rest/meetings?order=begins_at;
         # Can't push /auth/me because it looks like cookies
