Cache open file descriptors for static content

--- a/openresty/nginx/conf/includes/http/server/locations/elmclient.conf
+++ b/openresty/nginx/conf/includes/http/server/locations/elmclient.conf
@@ -5,6 +5,15 @@ location / {
     index index.html;
     gzip_static on;
     limit_except HEAD OPTIONS GET { deny all; }
+
+    # Cache information about what files exist on
+    # the filesystem. See
+    # https://rtcamp.com/tutorials/nginx/open-file-cache/
+    open_file_cache          max=1000 inactive=15m;
+    open_file_cache_valid    2m;
+    open_file_cache_min_uses 1;
+    open_file_cache_errors   on;
+
     location ~* main-.*\.(?:css|js)$ {
         expires max;
         add_header Pragma public;
