--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -27,10 +27,10 @@ http {
     more_set_headers 'Server:';
 
     # BEGIN Some hardening
-    client_body_buffer_size  1K;
+    client_body_buffer_size  1k;
     client_header_buffer_size 1k;
     client_max_body_size 10k; # Could need to increase this if need file uploads
-    large_client_header_buffers 2 1k;
+    large_client_header_buffers 4 1k;
 
     client_body_timeout 10;
     client_header_timeout 10;
