Rate limit requests to the default_server
Almost all these requests will be invalid or malicious

--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -125,6 +125,10 @@ http {
     limit_req_zone $binary_remote_addr zone=req_limit_zone:10m rate=25r/s;
     limit_conn_zone $binary_remote_addr zone=bandwidth_limit_zone:10m;
 
+     # Limits for default_server
+    limit_req_zone $binary_remote_addr zone=slow_req_zone:5m rate=30r/m;
+    limit_conn_zone $binary_remote_addr zone=slow_conn_zone:5m;
+
     upstream certbot {
         server certbot;
     }
@@ -137,6 +141,15 @@ http {
     # request.
     server {
       listen 80 default_server;
+
+      # Almost every request we get to this server is
+      # going to be malicious. So, we limit them and
+      # slow them down. See
+      # https://www.nginx.com/blog/mitigating-ddos-attacks-with-nginx-and-nginx-plus/
+      limit_req zone=slow_req_zone;
+      limit_conn slow_conn_zone 5;
+      client_body_timeout 2s;
+      client_header_timeout 2s;
 
       location / {
           # Ban IPs that hit our default server. See also waf.conf
