Reject ssl handshake attempts on default server

--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -176,6 +176,12 @@ http {
         }
     }
 
+    # Default server, which will reject ssl handshake attempts
+    server {
+        listen               443 ssl;
+        ssl_reject_handshake on;
+    }
+
     # HTTPS server
     server {
         #expose external env vars as internal nginx variables
