Remove directive not available until 1.19.4

--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -177,10 +177,11 @@ http {
     }
 
     # Default server, which will reject ssl handshake attempts
-    server {
-        listen               443 ssl;
-        ssl_reject_handshake on;
-    }
+    #server {
+    #    listen               443 ssl;
+    #    ssl_reject_handshake on;
+    #}
+    # Not available until 1.19.4
 
     # HTTPS server
     server {
