--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -7,7 +7,7 @@ services:
   # use a separate database instance, like Amazon RDS, i.e. in production this section will be
   # commented and in the .env file you will specify the ip of your separate database instance
   db:
-    image: ${PG_DOCKER_IMAGE}
+    image: postgres:13.1-alpine
     ports:
       - "127.0.0.1:5432:${DB_PORT}"
     environment:
