Listen on naked/apex domain and redirect to FQDN

--- a/docker-compose.base.yaml
+++ b/docker-compose.base.yaml
@@ -79,6 +79,7 @@ services:
         environment:
             - DEVELOPMENT=${DEVELOPMENT}
             - FQDN=${FQDN}
+            - NAKED_FQDN=${NAKED_FQDN}
             - POSTGREST_HOST=${POSTGREST_HOST}
             - POSTGREST_PORT=${POSTGREST_PORT}
             - AUTHAPP_JWT=${AUTHAPP_JWT}
