--- a/openresty/nginx/conf/nginx.conf
+++ b/openresty/nginx/conf/nginx.conf
@@ -161,7 +161,20 @@ http {
 
 
     # HTTP server
-    server {
+     server {
+        listen 80;
+        server_name ${NAKED_FQDN};
+
+        location /.well-known {
+            proxy_pass http://certbot;
+        }
+
+        location / {
+	    return 301 https://${FQDN}$request_uri;
+        }
+    }
+
+   server {
         listen 80;
         server_name ${FQDN};
 
@@ -170,9 +183,7 @@ http {
         }
 
         location / {
-            content_by_lua_block {
-                return ngx.redirect("https://" .. ngx.var.host .. ngx.var.request_uri, 302)
-            }
+	    return 301 https://${FQDN}$request_uri;
         }
     }
 
@@ -184,6 +195,13 @@ http {
     # Not available until 1.19.4
 
     # HTTPS server
+    server {
+        listen 443 ssl http2;
+        server_name ${NAKED_FQDN};
+        ssl_certificate /etc/letsencrypt/live/${NAKED_FQDN}/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/${NAKED_FQDN}/privkey.pem;
+        return 301 https://${FQDN}$request_uri;
+    }
     server {
         #expose external env vars as internal nginx variables
         listen 443 ssl http2;
