--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     },
     "scripts": {
         "test_rest": "mocha -s 1000 --recursive ./tests/rest/",
-        "test_db": "( set -a && . ./.env && set +a && ./bin/reset_db.sh && docker run -i -t --rm --name pgtap --net ${COMPOSE_PROJECT_NAME}_default --link ${COMPOSE_PROJECT_NAME}_db_1:db -v $(pwd)/tests/db/:/test -e HOST=$DB_HOST -e DATABASE=$DB_NAME -e USER=$SUPER_USER -e PASSWORD=$SUPER_USER_PASSWORD lren/pgtap )",
+        "test_db": "( set -a && . ./.env && set +a && ./bin/reset_db.sh && docker run -i -t --rm --name pgtap --net ${COMPOSE_PROJECT_NAME}_default --link ${COMPOSE_PROJECT_NAME}_db_1:db -v $(pwd)/tests/db/:/test -e HOST=$DB_HOST -e DATABASE=$DB_NAME -e USER=$SUPER_USER -e PASSWORD=$SUPER_USER_PASSWORD subzerocloud/pgtap:pg13 )",
         "test": "npm run test_db && npm run test_rest"
     },
     "author": "kyle.jensen@yale.edu",
