--- a/pythonclient/Pipfile
+++ b/pythonclient/Pipfile
@@ -8,7 +8,7 @@ verify_ssl = true
 [packages]
 click = "*"
 ldap3 = "*"
-psycopg2 = "*"
+psycopg2-binary = "*"
 jinja2 = "*"
 requests = "*"
 ruamel-yaml = "*"
