--- a/docker-compose.base.yaml
+++ b/docker-compose.base.yaml
@@ -62,21 +62,20 @@ services:
             - AWS_ACCESS_KEY_ID=${CERTBOT_AWS_ACCESS_KEY_ID}
             - AWS_SECRET_ACCESS_KEY=${CERTBOT_AWS_SECRET_ACCESS_KEY}
 
-    # OpenResty (Nginx + Lua) instance that sits in front of PostgREST.
-    # All the requests comming into the system are first hitting this component.
+    # Caddy instance that sits in front of PostgREST.
+    # All the requests coming into the system are first hitting this component.
     # After some processing/checks and transformation, the request is forwarded
     # to PostgREST down the stack.
-    openresty:
-        image: openresty/openresty:1.21.4.1-3-buster
+    caddy:
+        image: caddy:2.4.5-alpine
         ports:
-            - '${OPENRESTY_LISTEN_HOST}:80:80'
-            - '${OPENRESTY_LISTEN_HOST}:443:443'
+            - '${CADDY_LISTEN_HOST}:80:80'
+            - '${CADDY_LISTEN_HOST}:443:443'
         links:
             - postgrest:postgrest
             - sse:sse
             - certbot:certbot
             - redis:redis
-        entrypoint: /entrypoint.sh
         restart: on-failure
         environment:
             - DEVELOPMENT=${DEVELOPMENT}
@@ -95,18 +94,13 @@ services:
             - SSE_HOST=${SSE_HOST}
             - SSE_PORT=${SSE_PORT}
             - JWT_SECRET=${JWT_SECRET}
-            - AUTHAPP_CAS_URI=${AUTHAPP_CAS_URI}
-            - REDIS_PASSWORD=${REDIS_PASSWORD}
-            - OPENRESTY_SESSION_SECRET=${OPENRESTY_SESSION_SECRET}
+            - AUTHAPP_PORT=${AUTHAPP_PORT}
         volumes:
             - elmclient-build:/var/elmclient/
             - yelukerest-letsencrypt:/etc/letsencrypt/
-            - './openresty/entrypoint.sh:/entrypoint.sh'
-            - './openresty/nginx/conf/nginx.conf:/usr/local/openresty/nginx/conf/nginx.conf.tmpl'
-            - './openresty/nginx/conf/dhparam.pem:/usr/local/openresty/nginx/conf/dhparam.pem'
-            - './openresty/nginx/conf/includes:/usr/local/openresty/nginx/conf/includes'
-            - './openresty/nginx/html:/usr/local/openresty/nginx/html'
-            - './openresty/lualib/user_code:/usr/local/openresty/lualib/user_code'
+            - './caddy/Caddyfile:/etc/caddy/Caddyfile'
+            - './caddy/html:/usr/share/caddy/html'
+            - './caddy/user_code:/usr/share/caddy/user_code'
 
     # pg-amqp-bridge instance is responsible for forwarding NOTIFY events in PostgreSQL
     # to RabbitMQ based on the BRIDGE_CHANNELS configuration. This was originally
@@ -133,6 +127,14 @@ services:
         environment:
             - RABBITMQ_DEFAULT_USER=${RABBITMQ_DEFAULT_USER}
             - RABBITMQ_DEFAULT_PASS=${RABBITMQ_DEFAULT_PASS}
+    authapp:
+        build: authapp
+        ports:
+            - '127.0.0.1:${AUTHAPP_HOST_PORT}:${AUTHAPP_PORT}'
+        environment:
+            - DEVELOPMENT=${DEVELOPMENT}
+            - PORT=${AUTHAPP_PORT}
+            - AUTHAPP_CAS_URI=${CAS_URI}
     sse:
         build: sse
         ports:
