--- a/docker-compose.base.yaml
+++ b/docker-compose.base.yaml
@@ -69,6 +69,9 @@ services:
             - FQDN=${FQDN}
             - POSTGREST_PORT=${POSTGREST_PORT}
             - AUTHAPP_PORT=${AUTHAPP_PORT}
+            - ACME_ACCESS_KEY_ID==${CADDY_ACME_ACCESS_KEY_ID}
+            - ACME_SECRET_ACCESS_KEY=${CADDY_ACME_SECRET_ACCESS_KEY}
+
         volumes:
             - elmclient-build:/var/elmclient/
             - './caddy/Caddyfile:/etc/caddy/Caddyfile'
